# VARG

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  OPTIMIZATIONS.md  README.md  README_DE.md  REFERENCE.md  VARG.md  VARG_AGENT_GUIDE.md  VARG_TECHNICAL.html  VARG_TECHNICAL.md  VARG_TECHNICAL_OVERVIEW.md  core.html  filter_msg.py  install.ps1  install.sh
.github/workflows/: ci.yml
.vargc_cache/: Cargo.toml
.vargc_cache/src/: main.rs
Training/: append_new_features.py  clean_dataset.py  generate_varg_data.py  test_dataset.py  train_varg.py  varg_trainingsdaten.jsonl
bench-csharp/: Program.cs  bench-csharp.csproj
benchmarks/: BENCHMARKS.md  benchmarks.html  results.json  run_all.py
benchmarks/agent/: .gitignore  README.md  RESULTS.md  mem_recall.varg  run_runtime.sh
benchmarks/data/: data.py  data.rs  data.ts  data.varg
benchmarks/fib/: fib.cs  fib.py  fib.ts  fib.varg
benchmarks/fib/.vargc_cache/: Cargo.toml
benchmarks/fib/.vargc_cache/src/: main.rs
benchmarks/json_bench/: json_bench.cs  json_bench.py  json_bench.ts  json_bench.varg
benchmarks/token_compare/: agent_csharp.cs  agent_python.py  agent_rag_python.py  agent_rag_varg.varg  agent_rust.rs  agent_typescript.ts  agent_varg.varg
docs/: F41_varg-upgrade-plan.md  VARG_NEXT_10.md  VARG_UPGRADE_PLAN.md  gen_training.py  gen_training_batch2.py
docs/SkillUsed/: adr-writer.md
docs/adr/: 0001-runtime-skill-architektur-varg-agenten.md  README.md
docs/language/: L01_syntax-design.md  L02_compiler-phases.md  L03_ocap-security.md  L04_systems-features.md  L05_surrealql-ast.md
docs/os/: O01_os-architecture.md  O02_surrealdb-fs.md  O03_runtime-agents.md  O04_memory-mgmt.md  O05_bootstrapping.md
examples/: agent_memory.rs  api_client.varg  chat_agent.varg  claw_lite.rs  claw_lite.varg  data_pipeline.varg  file_processor.rs  file_processor.varg  hello.rs  hello.varg  knowledge_graph.rs  tracing.rs  tracing.varg  vector_store.rs  wave29_bytes.rs
golden/: .gitignore  run.sh
golden/expected/: agent_memory.expected  builtin_results.expected  collections.expected  data_pipeline.expected  json_get.expected  knowledge_graph.expected  mixed_compare.expected  mixed_numeric.expected  strings.expected  try_return.expected  types_print.expected  vector_store.expected  wave29_bytes.expected  workflow_runner.expected
golden/progs/: agent_memory.varg  builtin_results.varg  collections.varg  construction.varg  data_pipeline.varg  di_constructor.varg  generics.varg  json_get.varg  knowledge_graph.varg  mcp_router.varg  method_add.varg  mixed_compare.varg  mixed_numeric.varg  strings.varg  try_return.varg  types_print.varg  vector_store.varg  wave29_bytes.varg  workflow_runner.varg
spikes/mcp-mcp/: .gitignore  README.md  child_echo.varg  child_math.varg  mcp_mcp.varg  mcp_mcp_ui.varg  run.sh
spikes/skill-layer12/: .gitignore  README.md  skill_agent.varg
spikes/skill-layer3/: .gitignore  README.md  promoter.varg
varg-compiler/: Cargo.toml  bench.rs  bench.ts  bench.varg  bench1_compute.rs  bench1_compute.varg  bench2_agent.rs  bench2_agent.varg  bench3_data.rs  bench3_data.varg  bench_optimized.rs  bench_standalone.rs  benchmark_realistic.rs  benchmark_realistic.ts  benchmark_realistic.varg  build_out.txt  check_out.txt  main.rs  main.varg  test_interpolation.rs  test_interpolation.varg  token_compare_ts.ts  token_compare_varg.varg
varg-compiler/@L_tests/: test_phase10.rs  test_phase10.varg  test_phase11.varg  test_phase12.varg  test_phase13.varg  test_phase14_client.varg  test_phase14_server.varg  test_phase15.varg  test_phase16.varg  test_phase18.varg  test_phase19.varg  test_phase20.varg  test_phase20b.varg  test_phase20c.varg  test_phase20d.varg  test_phase20e.varg  test_phase21_std.varg  test_phase21a_lib.varg  test_phase21a_main.rs  test_phase21a_main.varg  test_phase23_generics.rs  test_phase23_generics.varg  test_phase9.rs  test_phase9.varg
varg-compiler/benchmarks/: agent_benchmark.rs  agent_benchmark.varg  bench4_generics.rs  bench4_generics.varg  bench5_async_agents.rs  bench5_async_agents.varg  bench6_patterns.rs  bench6_patterns.varg  bench7_fullstack.rs  bench7_fullstack.varg  bench_heavy.js  bench_heavy.py  bench_perf.varg  bench_perf_heavy.rs  bench_perf_heavy.varg  benchmark.py  benchmark.ts
varg-compiler/benchmarks/cs_bench/: Program.cs
varg-compiler/benchmarks/cs_heavy/: Program.cs
varg-compiler/crates/varg-ast/: Cargo.toml
varg-compiler/crates/varg-ast/src/: ast.rs  builtins.rs  lib.rs
varg-compiler/crates/varg-codegen/: Cargo.toml
varg-compiler/crates/varg-codegen/src/: lib.rs
varg-compiler/crates/varg-lexer/: Cargo.toml
varg-compiler/crates/varg-lexer/src/: lib.rs
varg-compiler/crates/varg-lsp/: Cargo.toml
varg-compiler/crates/varg-lsp/src/: completion.rs  diagnostics.rs  hover.rs  main.rs  symbols.rs
varg-compiler/crates/varg-os-types/: Cargo.toml
varg-compiler/crates/varg-os-types/src/: lib.rs
varg-compiler/crates/varg-parser/: Cargo.toml
varg-compiler/crates/varg-parser/src/: lib.rs
varg-compiler/crates/varg-playground/: Cargo.toml
varg-compiler/crates/varg-playground/src/: main.rs
varg-compiler/crates/varg-runtime/: Cargo.toml
varg-compiler/crates/varg-runtime/src/: channel.rs  checkpoint.rs  config.rs  cost.rs  crypto.rs  dataframe.rs  db.rs  db_sqlite.rs  duckdb_rt.rs  encoding.rs  fts.rs  graph.rs  hitl.rs  json.rs  lib.rs  llm.rs  localembed.rs  mcp.rs  mcp_server.rs  memory.rs  multimodal.rs  net.rs  orchestration.rs  pdf.rs  pipeline.rs  proc.rs  proptest.rs  rag.rs  ratelimit.rs  readline.rs  regex_utils.rs  registry.rs  self_improve.rs  server.rs  sse_client.rs  tensor.rs  trace.rs  vector.rs  websocket.rs  workflow.rs
varg-compiler/crates/varg-typechecker/: Cargo.toml
varg-compiler/crates/varg-typechecker/src/: lib.rs
varg-compiler/crates/vargc/: Cargo.toml
varg-compiler/crates/vargc/src/: formatter.rs  main.rs
varg-vscode/: README.md  language-configuration.json  package.json
varg-vscode/src/: extension.ts
varg-vscode/syntaxes/: varg.tmLanguage.json
varg-web-ide/: .dockerignore  .gitignore  Dockerfile
(+10 files in other folders)
