
[package]
name = "knowledge_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
varg-os-types = { path = "C:/Users/Anwender/Documents/CodingAdventures/Project X/crates/varg-os-types" }
varg-runtime = { path = "C:/Users/Anwender/Documents/CodingAdventures/Project X/crates/varg-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
