[workspace]
members = [
    "crates/varg-ast",
    "crates/varg-lexer",
    "crates/varg-parser",
    "crates/varg-typechecker",
    "crates/varg-codegen",
    "crates/vargc",
    "crates/varg-os-types",
    "crates/varg-runtime",
    "crates/varg-playground"
]
exclude = [
    ".vargc_cache"
]
resolver = "2"

[workspace.dependencies]
logos = "0.14"
codespan-reporting = "0.11"
