[workspace]
members = [
    "crates/varg-ast",
    "crates/varg-lexer",
    "crates/varg-parser",
    "crates/varg-typechecker",
    "crates/varg-codegen",
    "crates/vargc",
    "crates/varg-os-types",
    "crates/varg-runtime",
    "crates/varg-lsp"
]
exclude = [
    ".vargc_cache",
    # Experimental scratch crate: it `include!`s a generated, uncommitted
    # `main.rs`, so it cannot build from a fresh checkout. Kept in the repo but
    # out of the normal workspace build/CI.
    "crates/varg-playground"
]
resolver = "2"

[workspace.dependencies]
logos = "0.14"
codespan-reporting = "0.11"
serde_json = "1.0"
