
[package]
name = "fib"
version = "0.1.0"
edition = "2021"

[dependencies]
varg-os-types = { path = "C:/Users/Anwender/Documents/CodingAdventures/Project X/benchmarks/fib/crates/varg-os-types" }
varg-runtime = { path = "C:/Users/Anwender/Documents/CodingAdventures/Project X/benchmarks/fib/crates/varg-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
