[package]
name = "varg-lsp"
version = "0.1.0"
edition = "2021"
description = "Varg Language Server Protocol implementation"

[[bin]]
name = "varg-lsp"
path = "src/main.rs"

[dependencies]
varg-ast = { path = "../varg-ast" }
varg-lexer = { path = "../varg-lexer" }
varg-parser = { path = "../varg-parser" }
varg-typechecker = { path = "../varg-typechecker" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
