[package]
name = "varg-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime helpers for compiled Varg programs (networking, DB, LLM, crypto, vector math)"

# ── Feature flags ─────────────────────────────────────────────────────────────
# vargc scans the generated Rust source and enables only the features that are
# actually used, so unused modules and their heavy deps are never compiled.
# Note: rusqlite is always-on because graph.rs and vector.rs use it internally
# for their SQLite-backed persistence (user-facing db builtins are gated by "db").
[features]
default   = []
net       = ["dep:reqwest"]
server    = ["dep:axum", "dep:tokio", "dep:futures"]
db        = []          # gates db_sqlite + checkpoint modules (rusqlite always present)
llm       = ["dep:reqwest"]
ws        = ["dep:tungstenite"]
pdf       = ["dep:printpdf"]
readline  = ["dep:rustyline"]
crypto    = ["dep:aes-gcm", "dep:pbkdf2", "dep:sha2"]
encoding  = ["dep:base64"]
tensor      = ["dep:ndarray"]
dataframe   = ["dep:polars"]
duckdb      = ["dep:duckdb"]
fts         = ["dep:tantivy"]
# Wave 35: full = all features — used to pre-compile the runtime .rlib once.
full        = ["net", "server", "db", "llm", "ws", "pdf", "readline",
               "crypto", "encoding", "tensor", "dataframe", "duckdb", "fts"]
# WASM-safe subset: only pure-Rust modules (serde, serde_json, rand).
# Heavy deps (rusqlite, axum, reqwest, tungstenite) are excluded.
wasm-safe = []

# ── Always-on (tiny / fundamental) ────────────────────────────────────────────
[dependencies]
varg-os-types = { path = "../varg-os-types" }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
rand          = "0.8.5"
regex         = "1.10"
dirs          = "5.0"
rusqlite      = { version = "0.31", features = ["bundled"] }

# ── Optional heavy deps ────────────────────────────────────────────────────────
axum        = { version = "0.7",                                                  optional = true }
tokio       = { version = "1",    features = ["full"],                            optional = true }
reqwest     = { version = "0.12", features = ["blocking", "json", "native-tls"], optional = true }
# ureq removed: net feature now uses reqwest::blocking
tungstenite = { version = "0.24", features = ["native-tls"],  optional = true }
printpdf    = { version = "0.7",                              optional = true }
rustyline   = { version = "14.0",                             optional = true }
aes-gcm     = { version = "0.10.3",                           optional = true }
pbkdf2      = { version = "0.12.2",                           optional = true }
sha2        = { version = "0.10.8",                           optional = true }
base64      = { version = "0.22.1",                           optional = true }
futures     = { version = "0.3",                              optional = true }
ndarray     = { version = "0.16",                             optional = true }
polars      = { version = "0.46", features = ["lazy", "csv", "parquet", "strings", "dtype-full"], optional = true }
duckdb      = { version = "1.1",  features = ["bundled"],     optional = true }
tantivy     = { version = "0.22",                             optional = true }
